--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,37 @@
 2020-02-04  Chris Dumez  <cdumez@apple.com>
 
+        Partial revert of r248734 to fix leak of StorageAreaMaps
+        https://bugs.webkit.org/show_bug.cgi?id=207073
+
+        Reviewed by Alex Christensen.
+
+        Do a partial revert of r248734 so that the StorageNamespaceImpl no longer holds a strong
+        reference to its StorageAreaMap objects. The code for removing entries from 
+        StorageNamespaceImpl::m_storageAreaMaps (StorageNamespaceImpl::didDestroyStorageAreaMap())
+        was dead code after r248734 and thus StorageAreaMap were never destroyed.
+
+        * WebProcess/WebStorage/StorageAreaImpl.cpp:
+        (WebKit::StorageAreaImpl::create):
+        (WebKit::StorageAreaImpl::StorageAreaImpl):
+        (WebKit::StorageAreaImpl::length):
+        (WebKit::StorageAreaImpl::key):
+        (WebKit::StorageAreaImpl::item):
+        (WebKit::StorageAreaImpl::setItem):
+        (WebKit::StorageAreaImpl::removeItem):
+        (WebKit::StorageAreaImpl::clear):
+        (WebKit::StorageAreaImpl::contains):
+        (WebKit::StorageAreaImpl::storageType const):
+        * WebProcess/WebStorage/StorageAreaImpl.h:
+        * WebProcess/WebStorage/StorageAreaMap.cpp:
+        (WebKit::StorageAreaMap::create):
+        (WebKit::StorageAreaMap::~StorageAreaMap):
+        * WebProcess/WebStorage/StorageAreaMap.h:
+        * WebProcess/WebStorage/StorageNamespaceImpl.cpp:
+        (WebKit::StorageNamespaceImpl::storageArea):
+        * WebProcess/WebStorage/StorageNamespaceImpl.h:
+
+2020-02-04  Chris Dumez  <cdumez@apple.com>
+
         Unreviewed, follow-up assertion fix after r255662.
 
         * UIProcess/WebProcessPool.cpp:
