--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,14 @@
 2020-02-04  Jacob Uphoff  <jacob_uphoff@apple.com>
 
+        [ macOS ] legacy-animation-engine/fast/animation/request-animation-frame-iframe.html is flaky failing
+        https://bugs.webkit.org/show_bug.cgi?id=207235
+
+        Unreviewed test gardening.
+
+        * platform/mac/TestExpectations:
+
+2020-02-04  Jacob Uphoff  <jacob_uphoff@apple.com>
+
         [ macOS iOS ] imported/w3c/web-platform-tests/fetch/stale-while-revalidate/fetch.html is flaky failing
         https://bugs.webkit.org/show_bug.cgi?id=207230
         
