--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2020-02-04  Don Olmstead  <don.olmstead@sony.com>
+
+        [PlayStation] Enable TestWebKit
+        https://bugs.webkit.org/show_bug.cgi?id=207211
+
+        Reviewed by Ross Kirsling.
+
+        Turn back on API tests.
+
+        * Source/cmake/OptionsPlayStation.cmake:
+
 2020-02-04  Ross Kirsling  <ross.kirsling@sony.com>
 
         [CMake] Add Cairo::Cairo target
