--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-04  Alex Christensen  <achristensen@webkit.org>
+
+        Fix Mac CMake build
+        https://bugs.webkit.org/show_bug.cgi?id=207231
+
+        * PlatformMac.cmake:
+        * WebProcess/WebPage/mac/WebPageMac.mm:
+        (WebKit::WebPage::updateVisibleContentRects):
+
 2020-02-04  Chris Dumez  <cdumez@apple.com>
 
         Partial revert of r248734 to fix leak of StorageAreaMaps
