Non-unified build fixes early February 2020 edition https://bugs.webkit.org/show_bug.cgi?id=207227
Reviewed by Don Olmstead.

Source/JavaScriptCore:

* bytecode/PolyProtoAccessChain.h: Add missing inclusions of StructureIDTable.h and VM.h

Source/WebCore:

No new tests needed.

* accessibility/atk/AccessibilityObjectAtk.cpp: Add missing inclusion of WebKitAccessible.h
* inspector/agents/InspectorAnimationAgent.cpp: Add issing inclusions of JSExecState.h and
JavaScriptCore/InjectedScriptManager.h
* style/MatchedDeclarationsCache.cpp: Add missing inclusion of FontCascade.h

Source/WTF:

* wtf/SingleRootGraph.h: Add missing inclusion of wtf/StringPrintStream.h


Canonical link: https://commits.webkit.org/220224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255711 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/JavaScriptCore/ChangeLog
+++ b/Source/JavaScriptCore/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-04  Adrian Perez de Castro  <aperez@igalia.com>
+
+        Non-unified build fixes early February 2020 edition
+        https://bugs.webkit.org/show_bug.cgi?id=207227
+
+        Reviewed by Don Olmstead.
+
+        * bytecode/PolyProtoAccessChain.h: Add missing inclusions of StructureIDTable.h and VM.h
+
 2020-02-04  Alex Christensen  <achristensen@webkit.org>
 
         Fix Mac CMake build
