--- a/Source/WTF/ChangeLog
+++ b/Source/WTF/ChangeLog
@@ -1,3 +1,12 @@
+2020-02-04  Adrian Perez de Castro  <aperez@igalia.com>
+
+        Non-unified build fixes early February 2020 edition
+        https://bugs.webkit.org/show_bug.cgi?id=207227
+
+        Reviewed by Don Olmstead.
+
+        * wtf/SingleRootGraph.h: Add missing inclusion of wtf/StringPrintStream.h
+
 2020-02-04  Yusuke Suzuki  <ysuzuki@apple.com>
 
         [JSC] Introduce UnlinkedCodeBlockGenerator and reduce sizeof(UnlinkedCodeBlock)
