--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,3 +1,28 @@
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
+        Cherry-pick r254955. rdar://problem/59097777
+
+    WebKitTestRunner: move code sign configurations from WebKitTestRunner.xcconfig to DebugRelease.xcconfig
+    https://bugs.webkit.org/show_bug.cgi?id=206607
+    <rdar://problem/56087327>
+    
+    Reviewed by Alexey Proskuryakov.
+    
+    * WebKitTestRunner/Configurations/WebKitTestRunner.xcconfig:
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254955 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-22  Jiewen Tan  <jiewen_tan@apple.com>
+
+            WebKitTestRunner: move code sign configurations from WebKitTestRunner.xcconfig to DebugRelease.xcconfig
+            https://bugs.webkit.org/show_bug.cgi?id=206607
+            <rdar://problem/56087327>
+
+            Reviewed by Alexey Proskuryakov.
+
+            * WebKitTestRunner/Configurations/WebKitTestRunner.xcconfig:
+
 2020-01-30  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r255337. rdar://problem/58936679
