--- a/Tools/ChangeLog
+++ b/Tools/ChangeLog
@@ -1,5 +1,35 @@
 2020-02-03  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r254963. rdar://problem/59097777
+
+    Unreviewed, rolling out r254955.
+    
+    Broke internal builds
+    
+    Reverted changeset:
+    
+    "WebKitTestRunner: move code sign configurations from
+    WebKitTestRunner.xcconfig to DebugRelease.xcconfig"
+    https://bugs.webkit.org/show_bug.cgi?id=206607
+    https://trac.webkit.org/changeset/254955
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254963 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-22  Jiewen Tan  <jiewen_tan@apple.com>
+
+            Unreviewed, rolling out r254955.
+
+            Broke internal builds
+
+            Reverted changeset:
+
+            "WebKitTestRunner: move code sign configurations from
+            WebKitTestRunner.xcconfig to DebugRelease.xcconfig"
+            https://bugs.webkit.org/show_bug.cgi?id=206607
+            https://trac.webkit.org/changeset/254955
+
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r254955. rdar://problem/59097777
 
     WebKitTestRunner: move code sign configurations from WebKitTestRunner.xcconfig to DebugRelease.xcconfig
