--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,43 @@
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
+        Cherry-pick r254976. rdar://problem/58942734
+
+    fast/css/first-letter-and-float-crash.html asserts under ComplexLineLayout::createLineBoxes
+    https://bugs.webkit.org/show_bug.cgi?id=206651
+    <rdar://problem/54889982>
+    
+    Reviewed by Anders Carlsson.
+    
+    Source/WebCore:
+    
+    Take care that the first-letter style has the correct styleType set even when getCachedPseudoStyle failed.
+    This is used for checking if there is an existing first letter renderer.
+    
+    * rendering/updating/RenderTreeBuilderFirstLetter.cpp:
+    (WebCore::styleForFirstLetter):
+    
+    LayoutTests:
+    
+    * fast/css/first-letter-and-float-crash.html:
+    
+    Force an additional layout in the test to make the issue easily reproducible.
+    
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254976 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-23  Antti Koivisto  <antti@apple.com>
+
+            fast/css/first-letter-and-float-crash.html asserts under ComplexLineLayout::createLineBoxes
+            https://bugs.webkit.org/show_bug.cgi?id=206651
+            <rdar://problem/54889982>
+
+            Reviewed by Anders Carlsson.
+
+            * fast/css/first-letter-and-float-crash.html:
+
+            Force an additional layout in the test to make the issue easily reproducible.
+
 2020-01-23  Russell Epstein  <repstein@apple.com>
 
         Cherry-pick r254408. rdar://problem/58606270
