Cherry-pick r255111. rdar://problem/59097777
    Unreviewed, a speculative test fix after r255041

    * UIProcess/WebAuthentication/Mock/MockLocalConnection.mm:
    (WebKit::MockLocalConnection::getAttestation const):

    Canonical link: https://commits.webkit.org/219775@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255111 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.155@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@255720 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,23 @@
 2020-02-03  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r255111. rdar://problem/59097777
+
+    Unreviewed, a speculative test fix after r255041
+    
+    * UIProcess/WebAuthentication/Mock/MockLocalConnection.mm:
+    (WebKit::MockLocalConnection::getAttestation const):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255111 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-24  Jiewen Tan  <jiewen_tan@apple.com>
+
+            Unreviewed, a speculative test fix after r255041
+
+            * UIProcess/WebAuthentication/Mock/MockLocalConnection.mm:
+            (WebKit::MockLocalConnection::getAttestation const):
+
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255058. rdar://problem/59097764
 
     Make sure fetch tasks go to network if service worker never gets to activated
