Cherry-pick r255188. rdar://problem/59097777
    Unreviewed, a build fix after r255111

    * UIProcess/WebAuthentication/Mock/MockLocalConnection.mm:
    Adding some missing headers.

    Canonical link: https://commits.webkit.org/219852@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255188 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.163@safari-609-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@255728 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,23 @@
 2020-02-03  Russell Epstein  <repstein@apple.com>
 
+        Cherry-pick r255188. rdar://problem/59097777
+
+    Unreviewed, a build fix after r255111
+    
+    * UIProcess/WebAuthentication/Mock/MockLocalConnection.mm:
+    Adding some missing headers.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255188 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2020-01-27  Jiewen Tan  <jiewen_tan@apple.com>
+
+            Unreviewed, a build fix after r255111
+
+            * UIProcess/WebAuthentication/Mock/MockLocalConnection.mm:
+            Adding some missing headers.
+
+2020-02-03  Russell Epstein  <repstein@apple.com>
+
         Cherry-pick r255111. rdar://problem/59097777
 
     Unreviewed, a speculative test fix after r255041
